--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
