--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/material": "^19.1.3",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
+    "@angular/platform-server": "^19.2.2",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.2",
     "bootstrap": "^5.3.3",
