--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
               "public/css/styles.css",
               "public/css/styleslanding.css"
